--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "momentjs": "^2.0.0",
+    "negotiator": "^1.0.0",
     "next": "15.1.7",
+    "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-tailwindcss-datepicker": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
